Fix close button z-index

--- a/src/assets/src/frontend/scss/plugin/modules/_modal.scss
+++ b/src/assets/src/frontend/scss/plugin/modules/_modal.scss
@@ -119,6 +119,7 @@
 }
 
 button.ttt-pnwc-close {
+  z-index:25;
   background: transparent;
   background-color: #eee;
   cursor:pointer !important;
